# supersete

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/config/: __init__.py  model_configs.py
src/core/: __init__.py  common_interface.py  covering_design.py  probability_calculator.py  super_sete_analysis.py
src/guides/: super_sete_strategy_guide.py
src/validation/: __init__.py  validator.py
tests/: __init__.py
tests/integration/: test_my_model.py
