[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-sete-analysis"
version = "1.0.0"
description = "Sistema inteligente de análise e previsão para jogos da loteria Super Sete"
authors = [
    {name = "Sistema de Análise de Dados", email = "contato@supersete.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Games/Entertainment",
]
keywords = [
    "lottery", "prediction", "machine-learning", "data-analysis", 
    "super-sete", "brasil", "loteria", "previsao", "analise"
]

dependencies = [
    "pandas>=1.5.0,<2.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.9.0,<2.0.0",
    "scikit-learn>=1.1.0,<1.4.0",
    "openpyxl>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<24.0.0",
    "flake8>=5.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "isort>=5.0.0,<6.0.0",
]
advanced = [
    "xgboost>=1.6.0,<2.0.0",
    "lightgbm>=3.3.0,<4.0.0",
    "tensorflow>=2.10.0,<2.16.0",
]
viz = [
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "plotly>=5.0.0,<6.0.0",
]
optimization = [
    "optuna>=3.0.0,<4.0.0",
    "hyperopt>=0.2.7,<1.0.0",
]

[project.scripts]
super-sete = "main:main"
supersete-analysis = "main:main"

[project.urls]
Homepage = "https://github.com/usuario/super-sete-analysis"
Documentation = "https://github.com/usuario/super-sete-analysis/blob/main/README.md"
Repository = "https://github.com/usuario/super-sete-analysis"
"Bug Tracker" = "https://github.com/usuario/super-sete-analysis/issues"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["pandas", "numpy", "scipy", "sklearn", "matplotlib", "seaborn"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "xgboost.*",
    "lightgbm.*",
    "tensorflow.*",
    "keras.*",
    "optuna.*",
    "hyperopt.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]